# gnss2tec-logger

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  flake.nix
.github/workflows/: build-deb.yml
nix/: module.nix  package.nix
packaging/config/: runtime.env
packaging/debian/: postinst  postrm  prerm
packaging/systemd/: gnss2tec-logger.service
scripts/: build-deb.sh
src/: args.rs  main.rs
src/commands/: convert.rs  log.rs  mod.rs  run.rs
src/shared/: lock.rs  mod.rs  nmea.rs  signal.rs
