[package]
name = "gnss2tec-logger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.49", features = ["derive", "env"] }
ctrlc = "3.5.0"
fs2 = "0.4.3"
serialport = { version = "4.8.1", default-features = false }
ublox = "0.9.0"
