[package]
name = "gnss2tec-logger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.49", features = ["derive", "env"] }
ctrlc = "3.5.0"
fs2 = "0.4.3"
serialport = { version = "4.8.1", default-features = false }
ublox = "0.9.0"
flate2 = "1.1.5"
tar = "0.4.44"
rinex = { package = "rinex", git = "https://github.com/nav-solutions/rinex", rev = "5b66da84966f7d55620ff6ab77a3b6bb82587e3e", default-features = false, features = ["obs"] }
ionex = { package = "ionex", git = "https://github.com/nav-solutions/ionex", rev = "10594a956ff3ee8659ee177c0d1556215b2cdf9d" }
